# Surfaces

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  _bb_obj_func.py  collect_ml_search_data.py  collect_search_data.py  generate_parameter_coverage_docs.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: sync_release_drafts.py
.github/workflows/: docker_tests.yml  generate-plots.yml  publish_testing_image.yml  release-drafter.yml  tests.yml  update-ml-parameter-docs.yml
bbox_functions/: base_objective_function.py  convex.py  non_convex.py  test_functions.py
data-packages/: README.md
data-packages/surfaces-cec-data/: Makefile  README.md  pyproject.toml
data-packages/surfaces-cec-data/src/surfaces_cec_data/: __init__.py
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2005/: __init__.py  cec2005_data_dim10.npz  cec2005_data_dim2.npz  cec2005_data_dim30.npz  cec2005_data_dim50.npz
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2008/: __init__.py  cec2008_data_dim1000.npz
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2010/: __init__.py
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2013/: __init__.py  cec2013_data_dim10.npz  cec2013_data_dim2.npz  cec2013_data_dim20.npz  cec2013_data_dim30.npz  cec2013_data_dim40.npz  cec2013_data_dim5.npz  cec2013_data_dim50.npz  cec2013_data_dim60.npz  cec2013_data_dim70.npz  cec2013_data_dim80.npz  cec2013_data_dim90.npz
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2014/: __init__.py  cec2014_data_dim10.npz  cec2014_data_dim30.npz  cec2014_data_dim50.npz
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2015/: __init__.py  cec2015_data_dim10.npz  cec2015_data_dim30.npz
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2017/: __init__.py  cec2017_data_dim10.npz  cec2017_data_dim100.npz  cec2017_data_dim20.npz  cec2017_data_dim30.npz  cec2017_data_dim50.npz
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2019/: __init__.py  cec2019_data.npz
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2020/: __init__.py  cec2020_data_dim10.npz  cec2020_data_dim15.npz  cec2020_data_dim20.npz  cec2020_data_dim5.npz
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2021/: __init__.py  cec2021_data_dim10.npz  cec2021_data_dim20.npz
data-packages/surfaces-cec-data/src/surfaces_cec_data/cec2022/: __init__.py  cec2022_data_dim10.npz  cec2022_data_dim20.npz
data-packages/surfaces-onnx-files/: Makefile  README.md  pyproject.toml
data-packages/surfaces-onnx-files/src/surfaces_onnx_files/: __init__.py  gradient_boosting_regressor.onnx  gradient_boosting_regressor.onnx.meta.json  k_neighbors_classifier.onnx  k_neighbors_classifier.onnx.meta.json  k_neighbors_classifier.validity.onnx  k_neighbors_regressor.onnx  k_neighbors_regressor.onnx.meta.json
doc/: create_readme_plots.py
doc/images/: README.md
docs/: ML_PARAMETER_COVERAGE.md  README.md  ml_parameter_coverage.json  requirements.txt
docs/_generators/: __init__.py  config.py  convert_mermaid_to_svg.py  generate_all.py  generate_catalogs.py  generate_compatibility.py  generate_diagrams.py  generate_plots.py  generate_surrogates.py
docs/scripts/: generate_all_plots.py  generate_ml_plots.py  generate_surface_plot.py
docs/source/: Makefile  about.rst  api_reference.rst  conf.py  developer_guide.rst  examples.rst  faq.rst  get_involved.rst  get_started.rst  index.rst  installation.rst  troubleshooting.rst  user_guide.rst
docs/tests/: __init__.py  test_doc_snippets.py
examples/: introduction.ipynb  machine_learning.py  ml_visualization_example.py  plot_contour.py  plot_convergence.py  plot_fitness_distribution.py  plot_multi_slice.py  plot_surface.py  search_data_collection_example.py  simple_1D_function.py  sphere_function.py  surrogate_demo.py  test_examples.py
examples/algebraic/: ackley_example.py  rastrigin_example.py  sphere_example.py
examples/bbob/: ellipsoidal_example.py  rastrigin_example.py  sphere_example.py
examples/cec/: cec2013_example.py  cec2014_example.py  cec2017_example.py
examples/engineering/: pressure_vessel_example.py  three_bar_truss_example.py  welded_beam_example.py
examples/integrations/: gradient_free_optimizers_example.py  hyperactive_example.py  optuna_example.py  ray_tune_example.py  scipy_example.py
examples/machine_learning/: decision_tree_example.py  knn_classifier_example.py  random_forest_example.py
examples/modifiers/: combined_modifiers_example.py  delay_example.py  noise_example.py
gradient_free_objective_functions/: base_objective_function.py  convex.py  non_convex.py  visualize.py
logo_concepts/: generate_hyperbolic.py
requirements/: all_integrations.txt  requirements-build.txt  requirements-test.in  requirements-test.txt  requirements.in
scripts/: create_cec2005_data.py  create_cec2008_data.py  create_cec2010_data.py  create_cec2015_data.py  create_cec2019_data.py  generate_all_plots.py  generate_ml_plots.py  validate_test_dependencies.py
src/surfaces/: __init__.py  _array_utils.py  _base_test_function.py  _cost.py  _dependencies.py  _visualize.py  collection.py  cost.py  visualize.py
surfaces/: __init__.py  _base_test_function.py  base_objective_function.py  machine_learning.db  machine_learning.py  test_functions.py  visualize.py
surfaces/data_collector/: __init__.py  config.py  surfaces_data_collector.py
surfaces/machine_learning/: __init__.py  base_machine_learning_function.py  machine_learning_functions.py
surfaces/machine_learning_functions/: __init__.py  base_machine_learning_function.py  tabular_classifiers.py  tabular_regressors.py
tests/: conftest.py  search_data_db  test_2d_functions.py  test_all_test_functions.py  test_arrays_input.py  test_cec2014.py  test_coverage_report.py  test_data_collection.py  test_ml_functions.py  test_nd_functions.py  test_optimization.py  test_parameter_docs_workflow.py  test_presets.py  test_surfaces_data_collector.py
(+1244 files in other folders)
