[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "surfaces"
version = "0.5.1"
description = "A collection and visualization of black-box objective functions"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["visualization", "data-science"]
authors = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
maintainers = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.18.1",
    "pandas",
    "matplotlib",
    "plotly",
    "scikit-learn",
    "search-data-collector>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "check-manifest",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
    "flake8",
    "tox",
    "gradient-free-optimizers",
]
build = [
    "build",
]

[project.urls]
"Homepage" = "https://github.com/SimonBlanke/Surfaces"
"Bug Reports" = "https://github.com/SimonBlanke/Surfaces/issues"
"Source" = "https://github.com/SimonBlanke/Surfaces/"
