[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "surfaces"
version = "0.5.1"
description = "A collection and visualization of black-box objective functions"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["visualization", "data-science"]
authors = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
maintainers = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.18.1",
]

[project.optional-dependencies]
# Visualization (matplotlib + plotly)
viz = [
    "matplotlib",
    "plotly",
]
# Machine learning test functions
ml = [
    "scikit-learn",
]
# All optional features
full = [
    "surfaces[viz,ml]",
]
# Development
dev = [
    "surfaces[full]",
    "ruff",
    "pre-commit",
    "check-manifest",
]
# Testing (with all optional deps)
test = [
    "surfaces[full]",
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
    "gradient-free-optimizers",
]
# Testing (minimal, no optional deps)
test-minimal = [
    "pytest>=7.0.0",
    "pytest-cov",
]
# Build
build = [
    "build",
]
# Surrogate models
surrogate = [
    "onnxruntime>=1.16.0",
]
surrogate-train = [
    "onnxruntime>=1.16.0",
    "skl2onnx>=1.16.0",
]

[project.urls]
"Homepage" = "https://github.com/SimonBlanke/Surfaces"
"Bug Reports" = "https://github.com/SimonBlanke/Surfaces/issues"
"Source" = "https://github.com/SimonBlanke/Surfaces/"

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E731",   # lambda assignment
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "S603", "S607", "F841"]
"examples/*" = ["S101", "F841"]
"docs/*" = ["S101", "S603", "S607", "F841", "S110"]
"scripts/*" = ["F403", "F405", "E402", "S603"]
"*/__init__.py" = ["F401", "F403", "F405", "E402"]
"collect_*.py" = ["S603", "S607"]
# CEC benchmark implementations follow mathematical conventions
"src/surfaces/test_functions/cec/*" = ["F841", "E741"]
# Engineering functions use standard notation (l for length)
"src/surfaces/test_functions/engineering/*" = ["E741", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["surfaces"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-p no:warnings"
