[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
surfaces = ["py.typed"]

[project]
name = "surfaces"
version = "0.7.1"
description = "A collection and visualization of black-box objective functions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["test-functions", "optimization", "gradient-free-optimization", "visualization", "data-science", "cec", "bbob", "machine-learning", "surrogate-models"]
authors = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
maintainers = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.18.1",
]

[project.optional-dependencies]
# Visualization (matplotlib + plotly)
viz = [
    "matplotlib",
    "plotly",
]
# Machine learning test functions
ml = [
    "scikit-learn",
]
# CEC benchmark data files
cec = [
    "surfaces-cec-data==0.0.1",
]
# Time-series functions with sktime
timeseries = [
    "surfaces[ml]",
    "sktime>=0.24.0",
]
# Image classification with CNNs (requires tensorflow)
images = [
    "surfaces[ml]",
    "tensorflow>=2.10.0",
]
# XGBoost-based functions
xgboost = [
    "surfaces[ml]",
    "xgboost>=1.7.0",
]
# Pre-trained ONNX surrogate models
surrogates = [
    "surfaces-onnx-files==0.0.1",
    "onnxruntime>=1.10.0",
]
# All optional features
full = [
    "surfaces[viz,ml,cec,timeseries,images,xgboost,surrogates]",
]
# Development
dev = [
    "surfaces[full]",
    "ruff",
    "pre-commit",
    "check-manifest",
]
# Testing (with all optional deps)
test = [
    "surfaces[full]",
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
    "gradient-free-optimizers",
]
# Testing (minimal, no optional deps)
test-minimal = [
    "pytest>=7.0.0",
    "pytest-cov",
]
# Build
build = [
    "build",
]
# Surrogate models
surrogate = [
    "onnxruntime>=1.16.0",
]
surrogate-train = [
    "onnxruntime>=1.16.0",
    "skl2onnx>=1.16.0",
]
# Surrogate dashboard (developer tool)
dashboard = [
    "surfaces[ml,surrogate-train]",
    "streamlit>=1.28.0",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
]

[project.scripts]
surfaces-dashboard = "surfaces._surrogates._dashboard:run_dashboard"

[project.urls]
"Homepage" = "https://github.com/SimonBlanke/Surfaces"
"Bug Reports" = "https://github.com/SimonBlanke/Surfaces/issues"
"Source" = "https://github.com/SimonBlanke/Surfaces/"

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E731",   # lambda assignment
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "S603", "S607", "F841"]
"examples/*" = ["S101", "F841"]
"docs/*" = ["S101", "S603", "S607", "F841", "S110"]
"scripts/*" = ["F403", "F405", "E402", "S603"]
"*/__init__.py" = ["F401", "F403", "F405", "E402"]
"collect_*.py" = ["S603", "S607"]
# CEC benchmark implementations follow mathematical conventions
"src/surfaces/test_functions/cec/*" = ["F841", "E741"]
# Engineering functions use standard notation (l for length)
"src/surfaces/test_functions/engineering/*" = ["E741", "F841"]
# Dashboard uses Streamlit patterns
"src/surfaces/_surrogates/_dashboard/*" = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["surfaces"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests", "docs", "examples"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-p no:warnings"
markers = [
    "smoke: Quick sanity checks (<1s each)",
    "slow: Tests that take >5s",
    "ml: Machine learning functions (require sklearn)",
    "cec: CEC competition functions (all years)",
    "cec2013: CEC 2013 benchmark functions",
    "cec2014: CEC 2014 benchmark functions",
    "cec2017: CEC 2017 benchmark functions",
    "bbob: BBOB benchmark functions",
    "algebraic: Algebraic/mathematical functions",
    "engineering: Engineering design functions",
    "requires_data: Requires external data files",
    "viz: Visualization tests (require plotly/matplotlib)",
    "dashboard: Streamlit dashboard tests",
]
