[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surfaces-cec-data"
version = "0.0.1"
description = "CEC benchmark data files for the surfaces library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["optimization", "benchmarks", "CEC", "surfaces"]
authors = [
    {name = "Simon Blanke", email = "simon.blanke@yahoo.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Homepage" = "https://github.com/SimonBlanke/Surfaces"
"Bug Reports" = "https://github.com/SimonBlanke/Surfaces/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
surfaces_cec_data = ["**/*.npz"]
