[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surfaces-onnx-files"
version = "0.1.0"
description = "Pre-trained ONNX surrogate models for the surfaces library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Simon Blanke", email = "simon.blanke@yahoo.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/SimonBlanke/Surfaces"
Repository = "https://github.com/SimonBlanke/Surfaces"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
surfaces_onnx_files = ["**/*.onnx", "**/*.json"]
